# instrmt

./: .eslintrc.json  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  InstrmtConfig.in.cmake  LICENSE.txt  README.md  bootstrap.js  bootstrap.ts  eslint.config.mjs  instrmt.cxx  nodemon.json  package-lock.json  package.json  post-commit.sh  tsconfig.json
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  generate-benchmarks.sh  instrmt-benchmarks-functions.cxx  instrmt-benchmarks-functions.hxx  instrmt-benchmarks-functions2.cxx  instrmt-benchmarks-functions2.hxx  instrmt-benchmarks.cxx
cmake/: install-rules.cmake  instrmt-macros.cmake  instrmt.cmake
docker/: Dockerfile  step
example/: CMakeLists.txt  example.cpp
include/instrmt/: instrmt.hxx
instrmt/: instrmt.cxx  instrmt.hxx
instrmt/details/: base.hxx  engine.cxx  engine.hxx  utils.cxx  utils.h  utils.hxx
instrmt/itt/: CMakeLists.txt  itt-engine.cxx  itt-wrapper.hxx
instrmt/tracy/: CMakeLists.txt  tracy-engine.cxx  tracy-wrapper.hxx
instrmt/tty/: CMakeLists.txt  tty-engine.cxx  tty-utils.h  tty-wrapper.hxx
itt/: instrmt-itt.cxx
scripts/: ci.sh  fetch-google-benchmark.sh  fetch-ittapi.sh  fetch-tracy.sh
src/: instrmt-itt.cxx  instrmt-tracy.cxx  instrmt-tty.cxx  instrmt.cxx
test/: CMakeLists.txt
tests/: cmake2812-noqt.diff  install-prerequisites.sh  integration-tests.sh
tests/example/: CMakeLists.txt  example.cpp
tracy/: instrmt-tracy.cxx
tty/: instrmt-tty.cxx
